--- a/html/contact.html
+++ b/html/contact.html
@@ -61,7 +61,7 @@
 
                         <div class="form-group"><input class="input" type="tel"
                                 name="tel"
-                                placeholder="Телефоен">
+                                placeholder="Телефон">
                         </div>
 
                         <div class="form-group">
